--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,7 @@
 ###############
 *.class
 *.jar
-
+*.classpath
 
 ###############
 #  temp file  #
@@ -32,4 +32,6 @@
 *.bat
 
 #########保守模式############
+!/src/
 !/WebRoot/index.jsp/
+!/WebRoot/WEB-INF/web.xml
